ci/deployment/k8s/grafana-dep.yml
---
# Source: grafana-chart/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: minikube
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
---
# Source: grafana-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: minikube
spec:
  selector:
    matchLabels:
      app: grafana
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "grafana"
        vertical: "errorbudget"
        service: "dx.errorbudget.grafana"
        solution: "dx"
        solution_id: "S00332"
        marc_id: "A1435"
        version: latest
        kind: deployment
    spec:
      containers:
      - name: grafana
        image: eb2/eb-grafana
        imagePullPolicy: "Never"
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 3000
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 3000
      imagePullSecrets:
       - name: dockerregistryharbor
      terminationGracePeriodSeconds: 30
      priorityClassName: oma-high-priority
---
# Source: grafana-chart/templates/ingress-external.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: grafana-external
  namespace: minikube
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: grafana
      namespace: minikube
      port: 3000
---
# Source: grafana-chart/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: grafana-ingress
  namespace: minikube
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/`)      
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: grafana
      namespace: minikube
      port: 3000
